[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roboro"
version = "2.0.0-dev"
description = "Modular RL library that decomposes algorithms into orthogonal techniques"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Anton Wiehe" },
]
keywords = ["reinforcement-learning", "deep-learning", "modular", "pytorch"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "gymnasium[classic-control]>=1.0",
    "wandb>=0.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "moviepy>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
mujoco = [
    "gymnasium[mujoco]>=1.0",
]
robotics = [
    "gymnasium-robotics>=1.2",
]
atari = [
    "gymnasium[atari]>=1.0",
    "ale-py>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
all = [
    "roboro[mujoco,robotics,atari,dev]",
]

[project.urls]
Repository = "https://github.com/antonwiehe/Roboro"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "PIE",  # flake8-pie
    "ANN",  # flake8-annotations (encourage type hints)
]
ignore = [
    "E501",   # line too long — handled by formatter
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN"]     # don't require annotations in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmark tests",
    "integration: integration tests requiring environment",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["roboro"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0  # increase as we add tests
